--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<article>
+			<section>
+				<header>
+					<h1>Todo List</h1>
+					<button id="add"></button>
+				</header>
+
+			</section>
+		</article>
 		<script src="js/script.js"></script>
 	</body>
 </html>
