add cardboard and paper

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<article>
-			<section>
-				<header>
-					<h1>Todo List</h1>
-					<button id="add"></button>
-				</header>
+        <article>
+            <section id="card-board">
+                <section>
+                    <header>
+                        <h1>Todo List</h1>
+                        <button id="add"></button>
+                    </header>
 
-			</section>
-		</article>
+                </section>
+            </section>
+        </article>
 		<script src="js/script.js"></script>
 	</body>
 </html>
