--- a/index.html
+++ b/index.html
@@ -7,15 +7,28 @@
 	</head>
 	<body>
         <article>
-            <section id="card-board">
+            <div id="card-board">
                 <section>
                     <header>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </header>
+                    <div class="header">
                         <h1>Todo List</h1>
                         <button id="add"></button>
-                    </header>
-
+                    </div>
+                    <div class="tasks">
+                        <input type="checkbox"/>
+                        <p>Some text</p>
+                        <button id="remove"></button>
+                    </div>
                 </section>
-            </section>
+            </div>
         </article>
 		<script src="js/script.js"></script>
 	</body>
