--- a/index.html
+++ b/index.html
@@ -10,20 +10,23 @@
             <div id="card-board">
                 <section>
                     <header>
-                        <ul>
+                        <!--<ul>
                             <li></li>
                             <li></li>
                             <li></li>
                             <li></li>
                             <li></li>
-                        </ul>
+                        </ul>-->
                     </header>
                     <div class="header">
                         <h1>Todo List</h1>
                         <button id="add"></button>
+                        <div class="block">
+                            Add Task
+                        </div>
                     </div>
                     <div class="tasks">
-                        <input type="checkbox"/>
+                        <input type="checkbox" class="checkbox"/>
                         <p>Some text</p>
                         <button id="remove"></button>
                     </div>
