correct structure. restyling.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
                         Add Task
                     </div>
                 </header>
-                <div class="tasks">
-                    <input type="checkbox" class="checkbox"/>
-                    <p>Some text</p>
-                    <button id="remove"></button>
-                </div>
+                <ul>
+                    <li>
+                        <input type="checkbox" class="checkbox"/>
+                        <span>Some text</span>
+                        <button id="remove"></button>
+                    </li>
+                </ul>
             </section>
         </article>
 		<script src="js/script.js"></script>
