--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </header>
                 <ul>
                     <li>
-                        <input type="checkbox" class="checkbox"/>
+                        <input type="checkbox"/>
                         <span>Some text</span>
                         <button id="remove"></button>
                     </li>
