--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <article>
             <section>
                 <header>
-                    <h1>Todo List</h1>
+                    <h1 id="todo">Todo List</h1>
                     <button id="add"></button>
                     <div class="block">
                         Add Task
