style > "checkbox"(2 variants). Please check.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li>
                         <input type="checkbox"/>
                         <span>Some text</span>
-                        <button id="remove"></button>
+                        <button></button>
                     </li>
                 </ul>
             </section>
