fix bugs in style, add functionality for todo item

--- a/index.html
+++ b/index.html
@@ -6,24 +6,21 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-        <article>
-            <section>
-                <header>
-                    <h1>Todo List</h1>
-                    <button id="add"></button>
-                    <div class="block">
-                        Add Task
-                    </div>
-                </header>
-                <ul>
-                    <li>
-                        <input type="checkbox"/>
-                        <span>Some text</span>
-                        <button></button>
-                    </li>
-                </ul>
-            </section>
-        </article>
+			<section>
+				<header>
+					<h1>Todo List</h1>
+					<button class="add"></button>
+					<div class="block">
+						Add Task
+					</div>
+				</header>
+				<ul id="todos">
+					<!-- <li>
+						<input type="checkbox"/>
+						<button class="delete"></button>
+					</li> -->
+				</ul>
+			</section>
 		<script src="js/script.js"></script>
 	</body>
 </html>
